# us_parcels

./: .cursorignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  _targets.R  compose.yml  index.html  ingest.html  justfile  map.html  package.json  pixi.toml  playwright.config.ts
.cursor/: mcp.json  settings.json
.cursor/chats/: cursor_us_parcels_geospatial_data_forma.md
.cursor/context/: 2026-02-24_ingest-ui-martin-etl.reflection.md  2026-04-04_mlt-gdalg-experiments.reflection.md  (+1 more)
.github/: pull_request_template.md
R/: pipeline_functions.R
config/: ingest.css  map.css  martin.yaml  nginx.conf  parcels-style.json  tileserver-rs.toml
docs/: ARCHITECTURE.md  CLOUD_NATIVE_PIPELINE_SPEC.md  DATA_CONTRACT.md  FORMATS.md  MIGRATION_PLAN.md  ROADMAP.md  RUNBOOK.md  R_PARQUET_GUIDE.md  SHOWCASE.md  TASKS.md  VISUAL_VERIFICATION.md
scripts/: add_tiger_indexes.sql  etl_raw_to_parcel.sql  extract_state.ps1  extract_state_parallel.ps1  fgb_to_hilbert_parquet.py  generate_pmtiles.R  ingest.sh  ingest_postgis.ps1  misc.R  partition_by_county.py  pipeline.ps1  postgis_schema.sql  query.py  query_minio.py  query_tiger_gdalg.py  run.ps1  run_fulton_pmtiles.R  run_ga_large_parcels.R  run_ga_state_pmtiles.R  run_tiger_pmtiles.R  showcase.ps1  test_wkb_freestiler.R  tiger_gdalg.ps1  to_hilbert_parquet.py  upload_to_minio.py  validate_cloud_artifacts.ps1  validate_cloud_artifacts.py
services/ingest-api/: Dockerfile  main.py  pyproject.toml
services/ingest-api/tests/: test_api.py
tests/: map-proxy.spec.ts  map-visual.spec.ts
(+8 files in other folders)
